# Hotelucho

./: .gitmodules  CMakeLists.txt  Makefile  README.md  cliente.cpp  cliente.h  habitacion.cpp  habitacion.h  hotel  hotel.cpp  hotel.h  input  launcher.cpp  launcher.h  lector_archivo.cpp  lector_archivo.h  logica_hotel.cpp  logica_hotel.h  main.cpp  validador.cpp  validador.h
doc/: ArchivoInicializador.md  como testear  testing unitario  testing unitario.md
tests/: CMakeLists.txt  test_cliente.cpp  test_habitacion.cpp  test_hotel.cpp
